[package]
name = "rockery_datamodel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
ehttp = { version = "*", features = ["streaming"] }
typetag = "*"
base64 = "*"